--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 09 10:25:26 PST 2018
-ndk.dir=C\:\\Users\\colon\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\colon\\AppData\\Local\\Android\\Sdk
+#Wed Dec 12 17:34:15 PST 2018
+ndk.dir=C\:\\Users\\MichaelZ\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\MichaelZ\\AppData\\Local\\Android\\Sdk
