--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 12 17:34:15 PST 2018
-ndk.dir=C\:\\Users\\MichaelZ\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\MichaelZ\\AppData\\Local\\Android\\Sdk
+#Fri Jan 25 06:10:38 CST 2019
+sdk.dir=C\:\\Users\\AAA\\AppData\\Local\\Android\\Sdk
